@@ -1,3 +1,12 @@
+2011-02-23  Vincent Torri  <doursse at users dot sf dot net>
+
+	* src/lib/evil_stdio.c:
+	make vasprintf() compile on Windows CE
+
+	* src/lib/evil_time.c:
+	* src/lib/evil_time.h:
+	add stub tzset() for Windows CE
+
 2011-02-04  Vincent Torri  <doursse at users dot sf dot net>
 
 	* src/lib/evil_stdio.c:
